# rest-api-flask

./: README.md  docs.yml  main.py  pyproject.toml  test.py
instance/: database.db
