[project]
name = "rest-api-flask"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama>=0.4.6",
    "flasgger>=0.9.7.1",
    "flask>=3.1.2",
    "flask-restful>=0.3.10",
    "flask-sqlalchemy>=3.1.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
]
